--- a/app/globals.scss
+++ b/app/globals.scss
@@ -41,7 +41,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Fredoka", Arial, Helvetica, sans-serif;
 }
 
 .wavy-line-container {
@@ -56,6 +56,7 @@ body {
   :root {
     --background: 0 0% 100%;
     --background-2: 193 81% 85%;
+    --background-3: 193 81% 52%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
