add accordion section to the landing page

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -65,6 +65,7 @@ body {
     --primary: 28 91% 54%;
     --primary-hover: 28 91% 48%;
     --primary-active: 28 91% 40%;
+    --primary-light: 36 96% 54%;
     --primary-foreground: 0 0% 98%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
