--- a/public/styles/embla.scss
+++ b/public/styles/embla.scss
@@ -7,7 +7,7 @@
   --slide-spacing-sm: 1.6rem;
   --slide-size-sm: 50%;
   --slide-spacing-lg: 2rem;
-  --slide-size-lg: calc(100% / 3);
+  // --slide-size-lg: calc(100% / 3);
   --slide-size-lg-even: calc(100% / 4);
 }
 .embla__viewport {
@@ -33,6 +33,7 @@
   min-width: 0;
   flex: 0 0 var(--slide-size);
   padding-left: var(--slide-spacing);
+  user-select: none;
 }
 @media (min-width: 750px) {
   .embla__slide {
